# Commitlabs-Contracts

./: Cargo.toml  PR_RECORD_FEES_VALIDATION.md  README.md  test.ps1  test.sh
.github/workflows/: ci.yml  soroban-contracts-ci.yml
THREAT_MODEL.md docs/: THREAT_MODEL.md
benchmarks/results/: attestation_engine_incremental_health_metrics.md  commitment_core_created_between_bucket_index.md
contracts/: EMERGENCY.md
contracts/access_control/: Cargo.toml
contracts/allocation_logic/: Cargo.toml
contracts/attestation_engine/: Cargo.toml
contracts/commitment_core/: Cargo.toml
contracts/commitment_marketplace/: Cargo.toml  README.md
contracts/commitment_nft/: Cargo.toml
docs/: ALLOCATION_LOGIC_POOL_REGISTRY_AND_RISK_LEVELS.md  ATTESTATION_ENGINE_EDGE_CASES.md  COMMITMENT_NFT.md  COMMITMENT_TRANSFORMATION_AUTHORIZATION.md  COMPLIANCE_SCORE_TESTS.md  CONTRACT_FUNCTIONS.md  DEPLOYMENT_CHECKLIST.md  EARLY_EXIT.md  ERROR_EVENTS.md  FEES.md  FEE_MODEL_CROSS_CHECK.md  KNOWN_LIMITATIONS.md  MARKETPLACE_LISTING_LIFECYCLE.md  RISK_TRANCHES.md  SECURITY_AUDIT_PREP.md  SECURITY_CHECKLIST.md  SECURITY_CONSIDERATIONS.md  TEST_COVERAGE.md  THREAT_MODEL.md  TIMELOCK_RUNBOOK.md  UPGRADES.md  UPGRADE_PATHS.md  commitment_marketplace.md  health-metrics-no-attestations.md
docs/commitment_core/: SEMANTICS.md
docs/commitment_nft/: SETTLEMENT_AUTHORIZATION.md
docs/price_oracle/: admin_controls.md
tests/integration/: Cargo.toml  cross_contract_tests.rs  e2e_tests.rs  error_tests.rs  frontend_tests.rs  harness.rs  health_metrics_consistency_tests.rs
(+118 files in other folders)
