[workspace]
members = [
    "contracts/shared_utils",
    "contracts/commitment_nft",
    "contracts/commitment_marketplace",
    "contracts/commitment_core",
    "contracts/attestation_engine",
    "contracts/allocation_logic",
    "contracts/commitment_interface",
    "contracts/commitment_transformation",
    "contracts/price_oracle",
    "contracts/mock_oracle",
    "contracts/version-system",
    "contracts/time_lock"
]
# Note: tests/integration is excluded from workspace to prevent testutils feature
# from being enabled during WASM builds. Run integration tests separately.
exclude = [
    "tests/integration",
]
resolver = "2"

# Enable wasm_js feature for getrandom on wasm targets
[workspace.dependencies]
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

